# esp8266-cmake-arduino

./: CMakeLists.txt  esp8266.cmake
esp8266/: CMakeLists.txt  README
esp8266/cores/esp8266/: CMakeLists.txt
sketchs/: makeEspArduino.mk
sketchs/Blink/: Makefile  main.ino
